# loveletter

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml
src/: cfg.rs  git.rs  letter.rs  lib.rs  mail.rs  main.rs  utils.rs
test_data/: 2025-04-03.toml  2025.rst  config.toml  index.rst  mail.txt  mail2.txt
