[package]
name = "loveletter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.34", features = ["derive"] }
imap = { version = "3.0.0-alpha.15", features = ["native-tls"] }
log = "0.4.27"
mail-parser = "0.10.2"
serde = "1.0.219"
serde_derive = "1.0.219"
simplelog = "0.12.2"
toml = "0.8.20"
